--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
-# .github/workflows/deploy.yml
 name: CI/CD — deploy to VPS (Caddy)
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]  # adapte si tu déploies depuis autre branche
 
 jobs:
   build-and-deploy:
@@ -17,18 +16,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: npm
+          cache: 'npm'
 
-      - name: Install deps
+      - name: Install deps (CI)
         run: npm ci
 
-      - name: Build
+      - name: Build (Next.js)
         run: npm run build
 
       - name: Prepare artifact
         run: |
           mkdir -p deploy
-          cp -r .next package.json package-lock.json public next.config.js deploy/
+          cp -r .next package.json next.config.* public deploy/ 2>/dev/null || true
 
       - name: Deploy via rsync/ssh
         env:
@@ -37,28 +36,25 @@ jobs:
           VPS_HOST: ${{ secrets.VPS_HOST }}
         run: |
           set -e
-
-          # Setup SSH
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
           echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
 
-          # Create timestamped release directory
           TS=$(date -u +%Y%m%dT%H%M%SZ)
           REMOTE="/var/www/abdou-cyber/releases/$TS"
 
-          # Create remote directory
           ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=yes abdou-deploy@$VPS_HOST "mkdir -p $REMOTE"
-
-          # Upload files
           rsync -az --delete -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=yes" deploy/ abdou-deploy@$VPS_HOST:$REMOTE/
 
-          # Deploy and restart service
-          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=yes abdou-deploy@$VPS_HOST "
-            set -e &&
-            cd $REMOTE &&
-            npm ci --only=production &&
-            ln -sfn $REMOTE /var/www/abdou-cyber/current &&
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=yes abdou-deploy@$VPS_HOST <<EOF
+            set -e
+            cd $REMOTE
+            # Installe *runtime* uniquement. IMPORTANT:
+            # Assure-toi que "next" est bien dans "dependencies" de package.json (pas devDependencies)
+            npm i --omit=dev
+
+            # Bascule atomique + restart
+            ln -sfn "$REMOTE" /var/www/abdou-cyber/current
             sudo systemctl restart abdou-cyber
-          "
+EOF
