--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@openrouter/sdk": "^0.1.1",
     "@radix-ui/react-accordion": "1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-aspect-ratio": "1.1.7",
@@ -42,6 +43,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "8.6.0",
     "lucide-react": "^0.542.0",
+    "nanoid": "^5.1.6",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
@@ -53,7 +55,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.1.3",
+    "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
