--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "embla-carousel-react": "8.6.0",
     "lucide-react": "^0.542.0",
     "nanoid": "^5.1.6",
-    "next": "15.5.0",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.55.0",
     "recharts": "^3.1.2",
     "sonner": "2.0.7",
@@ -67,7 +67,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8.5.6",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.17",
